solo falta numeracion de recibos y lista dehonorarios